# neighbours

./: README.md  pyproject.toml
demo/: classifier_demo.py  demo.py  regressor_demo.py
neighbours/: __init__.py  classifier.py  distance.py  exceptions.py  knn_classifier.py  regressor.py  rp_neighbours.py
src/neighbours/: classifier.py  kernel.py  regressor.py  rp_neighbours.py
